@@ -2,7 +2,7 @@ Source: collectd
 Section: utils
 Priority: optional
 Maintainer: Sebastian Harl <sh@tokkee.org>
-Build-Depends: debhelper (>= 5), po-debconf, dpatch, bison | byacc, flex, autotools-dev, libcurl3-gnutls-dev, libmysqlclient15-dev | libmysqlclient14-dev, librrd2-dev | librrd0-dev, libsensors-dev, liboping-dev (>= 0.3.3), libpcap0.8-dev | libpcap-dev, nut-dev [!alpha !amd64 !hppa !ia64 !ppc64], libperl-dev, iproute-dev [!alpha !amd64 !hppa !ia64 !ppc64], libsnmp9-dev, libvirt-dev [amd64 i386 powerpc], libxml2-dev, libhal-dev
+Build-Depends: debhelper (>= 5), po-debconf, dpatch, bison | byacc, flex, autotools-dev, libcurl3-gnutls-dev, libmysqlclient15-dev | libmysqlclient14-dev, librrd2-dev | librrd0-dev, libsensors-dev, liboping-dev (>= 0.3.3), libpcap0.8-dev | libpcap-dev, iptables-dev [!alpha !amd64 !hppa !ia64 !ppc64], nut-dev [!alpha !amd64 !hppa !ia64 !ppc64], libperl-dev, iproute-dev [!alpha !amd64 !hppa !ia64 !ppc64], libsnmp9-dev, libvirt-dev [amd64 i386 powerpc], libxml2-dev, libhal-dev
 Build-Conflicts: libpthread-dev
 Standards-Version: 3.7.3
 Homepage: http://collectd.org/
@@ -47,6 +47,7 @@ Description: statistics collection and monitoring daemon
    * execution of external programs: exec
    * harddisk temperature: hddtemp
    * network traffic: interface
+   * iptables statistics: iptables
    * IPVS connection statistics: ipvs
    * IRQ counters: irq
    * CPU, dist, network statistics of guest systems: libvirt
