@@ -36,16 +36,13 @@ confflags = --host=$(DEB_HOST_GNU_TYPE) \
 			--disable-xmms \
 			--without-libstatgrab
 
-# libiptc is no longer available on Debian (see #472655).
-confflags += --disable-iptables
-
 # These plugins do not provide any functionality under Linux.
 confflags += --disable-apple_sensors --disable-tape
 
 # The static libraries iptc, netstat and upsclient cannot be used on
 # 64bit systems (see bugs #358637 and #419684 for more details).
 ifneq (,$(findstring $(DEB_BUILD_ARCH),alpha amd64 hppa ia64 ppc64))
-	confflags += --disable-netlink --disable-nut
+	confflags += --disable-iptables --disable-netlink --disable-nut
 endif
 
 # libvirt is only available on amd64, i386 and powerpc.
@@ -143,7 +140,7 @@ binary-arch: build install-arch
 	dh_installexamples -a contrib/collectd2html.pl contrib/collection.cgi \
 		contrib/exec-munin.conf contrib/exec-munin.px contrib/exec-smartctl \
 		contrib/exec-nagios.conf contrib/exec-nagios.px \
-		contrib/SpamAssassin/ contrib/cussh.pl \
+		contrib/SpamAssassin/ contrib/iptables/ contrib/cussh.pl \
 		contrib/snmp-data.conf contrib/add_rra.sh contrib/network-proxy.py
 	dh_installdebconf -a
 	dh_installinit -a -- defaults 95
